--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -25,7 +25,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-header">Content</li>
-            <li><a href="#">Build Quests</a></li>
+            <li><a href="{% url 'new_quest_custom' %}">Build Quests</a></li>
             <li><a href="#">Build Achievements</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Users</li>
@@ -45,7 +45,11 @@
 
         {% if request.user.is_authenticated %}
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Signed in as {{ request.user }} <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+            role="button" aria-haspopup="true" aria-expanded="false">
+
+            <i class="fa fa-user{% if request.user.is_staff %}-secret{%endif%}"></i>
+            &nbsp; {{ request.user }} <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-header">Privileges</li>
             <li><a href="javascript:var%20KICKASSVERSION='2.0';var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='//hi.kickassapp.com/kickass.js';void(0);">Destroy the Hackerspace</a></li>
