--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="{% url 'home' %}">Home</a></li> -->
         <li><a href="{% url 'home' %}">Announcements <span class="badge">23</span></a></li>
-        <li><a href="{% url 'home' %}">Quests</a></li>
+        <li><a href="{% url 'quests' %}">Quests</a></li>
         <li><a href="{% url 'home' %}">Achievements</a></li>
 
         {% if request.user.is_authenticated and request.user.is_staff %}
@@ -25,7 +25,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-header">Content</li>
-            <li><a href="{% url 'new_quest_custom' %}">Build Quests</a></li>
+            <li><a href="/admin/quest_manager/quest/add/">Build Quests</a></li>
             <li><a href="#">Build Achievements</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Users</li>
