--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="{% url 'home' %}">Home</a></li> -->
         <li><a href="{% url 'home' %}">Announcements <span class="badge">23</span></a></li>
-        <li><a href="{% url 'quests' %}">Quests</a></li>
+        <li><a href="{% url 'quests:quests' %}">Quests</a></li>
         <li><a href="{% url 'home' %}">Achievements</a></li>
 
         {% if request.user.is_authenticated and request.user.is_staff %}
@@ -35,7 +35,7 @@
             <li><a href="/admin">Django Admin</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Debug</li>
-            <li><a href="{% url 'email_demo' %}">Email Test</a></li>
+            <li><a href="{% url 'quests:email_demo' %}">Email Test</a></li>
           </ul>
         </li>
         {% endif %}
