--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -15,11 +15,18 @@
       {% for q in quest_list %}
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading{{q.id}}">
-          <h4 class="panel-title">
-            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{q.id}}" aria-expanded="true" aria-controls="collapse{{q.id}}">
-              {{ q.name }}
-            </a>
-          </h4>
+          <div class="media">
+            <div class="media-left media-middle">
+              <img class="media-object" src="{{q.icon.url}}" alt="icon" height="32px"/>
+            </div>
+            <div class="media-body">
+              <h4 class="panel-title media-body">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{q.id}}" aria-expanded="true" aria-controls="collapse{{q.id}}">
+                {{ q.name }}
+                </a>
+              </h4>
+            </div>
+          </div>
         </div>
           <div id="collapse{{q.id}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading{{q.id}}">
             <div class="panel-body">
