--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -16,16 +16,16 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="{% url 'home' %}">Home</a></li> -->
-        <li><a href="{% url 'announcements' %}">Announcements <span class="badge">23</span></a></li>
-        <li><a href="{% url 'quests' %}">Quests</a></li>
-        <li><a href="{% url 'achievements' %}">Achievements</a></li>
+        <li><a href="{% url 'home' %}">Announcements <span class="badge">23</span></a></li>
+        <li><a href="{% url 'quests:quests' %}">Quests</a></li>
+        <li><a href="{% url 'home' %}">Achievements</a></li>
 
         {% if request.user.is_authenticated and request.user.is_staff %}
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-header">Content</li>
-            <li><a href="{% url 'new_quest_custom' %}">Build Quests</a></li>
+            <li><a href="/admin/quest_manager/quest/add/">Build Quests</a></li>
             <li><a href="#">Build Achievements</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Users</li>
@@ -35,7 +35,7 @@
             <li><a href="/admin">Django Admin</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Debug</li>
-            <li><a href="{% url 'email_demo' %}">Email Test</a></li>
+            <li><a href="{% url 'quests:email_demo' %}">Email Test</a></li>
           </ul>
         </li>
         {% endif %}
