--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="{% url 'home' %}">Home</a></li> -->
         <li><a href="{% url 'home' %}">Announcements <span class="badge">23</span></a></li>
-        <li><a href="{% url 'quests:quests' %}">Quests</a></li>
+        <li><a class="active" href="{% url 'quests:quests' %}">Quests</a></li>
         <li><a href="{% url 'home' %}">Achievements</a></li>
 
         {% if request.user.is_authenticated and request.user.is_staff %}
