--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -13,7 +13,15 @@
     <!-- js via CDN -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+    <!-- Bootstrap Tables: Latest compiled and minified JavaScript -->
+    <!-- http://bootstrap-table.wenzhixin.net.cn/getting-started/ -->
+      <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.js"></script>
+      <!-- Latest compiled and minified Locales -->
+      <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/locale/bootstrap-table-zh-CN.min.js"></script>
+
     <!-- Custom js -->
+
+    <!-- format text inputs that have datePicker class to have a datepicker -->
     <script>
       $(document).ready(function() {
 
