basic profile view and template

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -58,7 +58,7 @@
             <li><a href='javascript:var%20script=document.createElement("script");script.src="http://google-gravity-bookmarklet.googlecode.com/svn/trunk/bookmarklet/";document.body.appendChild(script);void(0);'>Turn on Gravity</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Profile</li>
-            <li><a href="{% url 'account_change_password' %}">Change Password</a></li>
+            <li><a href="{% url 'profiles:profile' %}">View Profile</a></li>
           </ul>
         </li>
 
