profile manager class based views

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,8 +32,12 @@
 
     <div class="container">
       {% block content_outer %}
-        {% block content %}
-        {% endblock %}
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
       {% endblock %}
 
       {% block extra_body %}
