--- a/src/profile_manager/templates/profile_manager/detail.html
+++ b/src/profile_manager/templates/profile_manager/detail.html
@@ -5,20 +5,28 @@
 {% block head_title%}{% if title %}{{ title }}{% endif %}{% endblock%}
 
 {% block content %}
-
+<div class="row">
+  <div class="col-sm-12">
+    <h2>Profile <small>{{p.user}}</small></h2>
+  </div>
+</div>
 <div class="row">
   <div class="col-sm-6">
-    {% if heading %}<h1>{{ heading }}</h1>{% endif %}
-
+</div>
+  <div class="col-sm-12">
     {% if p %}
-      <!-- {{ q.instructions | safe }} -->
-      <ul>
-        <li>{{ q.user }}</li>
-      </ul>
+      {{ p.user}}
+      {{ p.first_name}}
+      {{ p.last_name}}
+      {{ p.preferred_name}}
+      {% if p.avatar %}<img class="media-object" src="{{p.avatar.url}}" alt="avatar" height="16px"/>{% endif %}
+      {{ p.student_number}}
+      {{ p.grad_year}}
+      {{ p.datetime_created}}
+
     {% else %}
       <p>Profile doesn't exist.</p>
     {% endif %}
 
-  </div>
 </div>
 {% endblock %}
