--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -43,6 +43,16 @@
           .addClass("btn btn-default")
           .wrap("<span class='input-group-btn'></span");
 
+        /* off-canvas sidebar toggle */
+        $('[data-toggle=offcanvas]').click(function() {
+          $(this).toggleClass('visible-xs text-center');
+          $(this).find('i').toggleClass('glyphicon-chevron-right glyphicon-chevron-left');
+          $('.row-offcanvas').toggleClass('active');
+          $('#lg-menu').toggleClass('hidden-xs').toggleClass('visible-xs');
+          $('#xs-menu').toggleClass('visible-xs').toggleClass('hidden-xs');
+          $('#btnShow').toggle();
+        });
+
       });
 
     </script>
