--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,10 +32,10 @@
 
     <div class="container">
       <div class="row row-offcanvas row-offcanvas-left">
-        <div class="column col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
+        <nav class="column col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
           {% include 'sidebar.html' %}
           {% block content_outer %}
-        </div>
+        </nav>
         <div class="col-xs-11 col-sm-9" id="main"> <!-- These settings need to compliment the sidebar settings -->
           {% block content %}
           {% endblock %}
