--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -46,13 +46,19 @@
         /* off-canvas sidebar toggle */
         $('[data-toggle=offcanvas]').click(function() {
           $(this).toggleClass('visible-xs text-center');
-          $(this).find('i').toggleClass('glyphicon-chevron-right glyphicon-chevron-left');
+          $(this).find('i').toggleClass('fa-chevron-right fa-chevron-left');
           $('.row-offcanvas').toggleClass('active');
           $('#lg-menu').toggleClass('hidden-xs').toggleClass('visible-xs');
           $('#xs-menu').toggleClass('visible-xs').toggleClass('hidden-xs');
           $('#btnShow').toggle();
         });
 
+        /* switch active elements when selected */
+        // $('.list-group-item').on('click',function(e){
+        //   var previous = $(this).closest(".list-group").children(".active");
+        //   previous.removeClass('active'); // previous list-item
+        //   $(e.target).addClass('active'); // activated list-item
+        // });
       });
 
     </script>
