--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -5,14 +5,14 @@
 
 
   <ul class="nav">
-    <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="glyphicon glyphicon-chevron-right"></i></a></li>
+    <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="fa fa-chevron-right fa-fw"></i></a></li>
   </ul>
 
    <h3 class="hidden-xs"> <!--so logo margins align with main div headings-->
     <img id="logo" src ="{% static 'img/banner.png' %}"  class="img-responsive" alt="Timberline's Digital Hackerspace Logo" />
   </h3>
   <div class="nav list-group hidden-xs" id="lg-menu">
-      <a class="list-group-item active" href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i>&nbsp; Quests</a>
+      <a class="list-group-item" href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i>&nbsp; Quests</a>
       <a class="list-group-item" href="#"><i class="fa fa-trophy fa-fw"></i>&nbsp;
         <span class="visible-sm-inline visible-xs-inline shrinktextmore">Acheive...</span>
         <span class="hidden-sm hidden-xs">Achievements</span>
@@ -21,7 +21,7 @@
       <a class="list-group-item" href="#"><i class="fa fa-newspaper-o fa-fw"></i>&nbsp;
         <span class="visible-sm-inline visible-xs-inline visible-md-inline shrinktextmore">Announce...</span>
         <span class="hidden-sm hidden-xs hidden-md">Announcements</span>
-        <span class="badge">8</span>
+        <span class="badge alert-danger">8</span>
       </a>
   </div>
 
