--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,7 +30,7 @@
     {% block jumbotron %}
     {% endblock %}
 
-    <div class="container">
+    <div class="container-fluid">
       {% block content_outer %}
       <div class="row row-offcanvas row-offcanvas-left">
         <nav class="column col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
