--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -18,7 +18,7 @@
         <span class="hidden-sm hidden-xs">Achievements</span>
         </a>
       <a class="list-group-item" href="{% url 'profiles:profile_list' %}"><i class="fa fa-users fa-fw"></i>&nbsp; Group</a>
-      <a class="list-group-item" href="#"><i class="fa fa-newspaper-o fa-fw"></i>&nbsp;
+      <a class="list-group-item" href="{% url 'announcements:list' %}"><i class="fa fa-newspaper-o fa-fw"></i>&nbsp;
         <span class="visible-sm-inline visible-xs-inline visible-md-inline shrinktextmore">Announce...</span>
         <span class="hidden-sm hidden-xs hidden-md">Announcements</span>
         <span class="badge alert-danger">8</span>
