Announcements create view

--- a/src/announcements/templates/announcements/list.html
+++ b/src/announcements/templates/announcements/list.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load staticfiles %}
 
-{% block head_title%}{% if title %}{{ title }}{% endif %}{% endblock%}
+{% block head_title%}Announcements | {% endblock%}
 
 {% block content %}
 <h2><i class="fa fa-newspaper-o "></i> Announcements</h2>
