--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -1,11 +1,12 @@
-{% extends "base.html" %}
+{% extends "base_sidebar.html" %}
 {% load crispy_forms_tags %}
 {% load staticfiles %}
 
-{% block head_title%}{% if title %}{{ title }}{% endif %}{% endblock%}
+{% block head_title%}{% if title %}{{ title }} <i class="fa fa-newspaper-o pull-right"></i>{% endif %}{% endblock%}
 
+{% block heading %}Group <i class="fa fa-users pull-right"></i>{% endblock %}
 {% block content %}
-<h1>Profile for {{object.user}} </h1>
+<h4>Profile for {{object.user}} </h4>
 <p>Alias: {{object.alias}} </p>
 <p>First Name: {{object.first_name}} </p>
 <p>Last Name: {{object.last_name}} </p>
