--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -1,11 +1,12 @@
-{% extends "base.html" %}
+{% extends "base_sidebar.html" %}
 {% load crispy_forms_tags %}
 {% load staticfiles %}
 
 {% block head_title%}{% if title %}{{ title }}{% endif %}{% endblock%}
 
+{% block heading %}Group <i class="fa fa-users pull-right"></i>{% endblock %}
+
 {% block content %}
-<h1>Profiles</h1>
 {% for object in object_list %}
 <h3>User: {{object.user}}
   <small>
