--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -24,7 +24,7 @@
 
   {% block jumbotron %}
   <div class="jumbotron">
-    <div class="container">
+    <div class="container-fluid">
       <img class = "img-responsive banner1" src ="{% static 'img/banner.png' %}" alt="Timberline's Digital Hackerspace Landing Page" />
        <!-- <h1>Timberline's Digital Hackerspace <small>Online</small></h1>
       <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
