--- a/src/announcements/templates/announcements/list.html
+++ b/src/announcements/templates/announcements/list.html
@@ -1,25 +1,35 @@
-{% extends "base_sidebar.html" %}
-{% load crispy_forms_tags %}
-{% load staticfiles %}
+{% extends "announcements/base.html" %}
 
-{% block head_title%}Announcements | {% endblock%}
-{% block heading %}Announcements <i class="fa fa-newspaper-o pull-right"></i>{% endblock %}
+{% block heading_inner %}Announcements
+{% if request.user.is_authenticated and request.user.is_staff %}
+  <a class="btn btn-primary" href="{% url 'announcements:create' %}" role="button">New</a>
+{% endif %}
+{% endblock %}
 {% block content %}
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 {% for object in object_list %}
   <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="heading{{object.id}}">
+    <div class="panel-heading accordian-trigger" role="tab" id="heading{{object.id}}" data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{object.id}}" aria-expanded="true" aria-controls="collapse{{object.id}}">
+        <!-- <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{object.id}}" aria-expanded="true" aria-controls="collapse{{object.id}}"> -->
           {{object.title}}
-        </a>
+        <!-- </a> -->
         <small class="pull-right">{{object.datetime_released.date}}</small>
       </h4>
     </div>
     <div id="collapse{{object.id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{object.id}}">
       <div class="panel-body">
         <i class="fa fa-quote-left fa-3x pull-left fa-border"></i>
-        {{object.content}}
+        <div>
+          {{object.content}}
+        </div>
+        {% if request.user.is_authenticated and request.user.is_staff %}
+        <div class="pull-right">
+          <a class="btn btn-danger" href="{% url 'announcements:delete' object.id %}" role="button">Delete</a>
+          <a class="btn btn-info" href="{% url 'announcements:update' object.id %}" role="button">Edit</a>
+          <a class="btn btn-primary" href="" role="button">Copy</a>
+        </div>
+        {% endif %}
       </div>
     </div>
   </div>
