--- a/src/static_in_project/our_static/css/custom.css
+++ b/src/static_in_project/our_static/css/custom.css
@@ -14,8 +14,13 @@
   border-color: #D43F3A;
   /*font-size: 75%;*/
   background-image: none;
+  /*background-image: linear-gradient(to bottom, #D9534F 0px, #D43F3A 100%);*/
 }
 
+.panel-default > .panel-heading.accordian-trigger.active {
+  background-color: #337AB7;
+  color: #FFF;
+}
 
 /*Make clickable accordian tabs change to pointer cursor*/
 .accordian-trigger {
